--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -63,6 +63,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/loginbtnborder"
                     android:paddingHorizontal="35dp"
+                    android:onClick="@{()->SignInViewModel.onSignUpButtonClick(context)}"
                     android:text="Sign up"
                     android:layout_marginHorizontal="5dp"
                     android:textSize="25sp"
@@ -158,8 +159,6 @@
                     android:contentDescription="Google Image"
                     android:layout_marginStart="110dp"
                     android:layout_marginVertical="5dp" />
-
-
             </RelativeLayout>
         </LinearLayout>
 
