--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -55,19 +55,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
-                    <LinearLayout
+                    <androidx.cardview.widget.CardView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="90dp">
+                        android:layout_marginTop="80dp"
+                        android:elevation="5dp"
+                        app:cardCornerRadius="10dp">
+
+
                         <ImageView
-                            android:id="@+id/imageViewProfileDp"
-                            android:layout_width="120dp"
-                            android:layout_height="120dp"
-                            android:layout_gravity="center"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/user_0" />
-                    </LinearLayout>
+                            android:id="@+id/imageView_profile_dp"
+                            android:layout_width="160dp"
+                            android:layout_height="160dp"
+                            android:scaleType="centerCrop" />
+                    </androidx.cardview.widget.CardView>
 
                     <ProgressBar
                         android:id="@+id/progress_bar_profile_pic"
@@ -118,7 +120,7 @@
                         android:backgroundTint="@color/white" />
 
                     <TextView
-                        android:id="@+id/textViewFullName"
+                        android:id="@+id/textView_show_full_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignStart="@id/ic_profile"
@@ -155,7 +157,7 @@
                         android:backgroundTint="@color/white" />
 
                     <TextView
-                        android:id="@+id/textViewEmail"
+                        android:id="@+id/textView_show_email"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignStart="@id/ic_email"
@@ -192,7 +194,7 @@
                         android:backgroundTint="@color/white" />
 
                     <TextView
-                        android:id="@+id/textViewDob"
+                        android:id="@+id/textView_show_dob"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignStart="@id/ic_dob"
