--- a/app/src/main/res/drawable/background_received_message.xml
+++ b/app/src/main/res/drawable/background_received_message.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/black"/>
+    <solid android:color="#999999"/>
     <corners
         android:bottomRightRadius="@dimen/_24sdp"
         android:topLeftRadius="@dimen/_24sdp"
