--- a/app/src/main/res/drawable/background_sent_message.xml
+++ b/app/src/main/res/drawable/background_sent_message.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#0B1132"/>
+    <solid android:color="#3333CC
+
+"/>
     <corners
         android:bottomLeftRadius="@dimen/_24sdp"
         android:topLeftRadius="@dimen/_24sdp"
